assets/css/style.css
/* ... */
.form-container form {
    text-align: left;
    width: 95%;
}

.form-center, .form-container label {
   display: block; 
}

.form-center {
    text-align: center;
}

.form-center .cta-btn {
    margin: 0;
}

.form-container .text-field {
    color: black;
    height: 25px;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px; 
    padding: 0 0.5em;    
}

.form-container .textarea-field {
    color: black;
    height: 10em;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px;
    padding: 0.5em 0.5em;
}

/* End Contact Section */

/* Footer Section */

footer {
    background: #005c10;
}

footer > div {
    text-align: center;
}

footer li {
    list-style-type: none;
    margin-bottom: 1.5em;    
}

footer li a {
    color: #fff;
    text-decoration: none;
}

footer li a:hover {
    color: #fff;
    text-decoration: underline;
}

#footer-top .cta-btn {
    margin-bottom: 1.5em;
}

#logo-tagline, #footer-bottom, #footer-connect {
    color: #fff;
}

#logo-tagline img {
    margin-bottom: 1.5em;
}

#footer-links, #footer-connect {
    border-top: 1px solid #fff;
}

#footer-top {
    display: flex;
    flex-direction: row;    
    width: 85%;
    padding: 0 0 1.5em 0;
    flex-wrap: wrap;
    column-gap: 3.5em;
}

#logo-tagline, #footer-nav {
    display: flex;
    flex-direction: column;
    flex: 1;
}

#footer-links, #footer-connect {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    flex-wrap: wrap;
}

#footer-links {
    text-align: right;
}

#footer-links, #connect-left-block {
    padding-top: 1.5em;
}

#connect-left-block, #connect-right-block {
    flex: 1 1 33.33%;
}

#links-left-block {
    flex: 0;
}

#links-right-block {
    min-width: 280px;
    flex: 1 1 66.67%;
    text-align: center;    
}

#connect-left-block, #connect-right-block {
    text-align: center;
}

#connect-middle-block {
    flex: 0;
}

#connect-right-block {
    min-width: 290px;
}

#footer-connect h3 {
    font-weight: normal;
}

#footer-connect .social-link a:link, #footer-connect .social-link a:visited, #footer-connect .social-link a:active {
    color: #fff;
    text-decoration: none;
}

#footer-bottom {
    width: 100%;
    padding: 1.5em 0 0 0;
    border-top: 1px solid #fff;
}

#footer-bottom .social-icon {
    margin-right: 1.5em;
}

#footer-bottom .social-icon img {
    filter: drop-shadow(5px 5px 5px #000);
}

/* End Footer Section */

/* Tablet Portrait Styles */

@media only screen and (min-width: 600px) {

/* Tablet - General Layout */

header, section:not([id*="parallax"]) {
    width: 85%;
    margin: auto;
    text-align: center;
}

section[id^="parallax"] {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;  
}

section {
    display: flex;
    flex-direction: row;
    justify-content: center; 
    column-gap: 3.5em;
}

#services {
    column-gap: 2.5em;
    row-gap: 3.5em;
}

header {
    padding: 0;
}

section {
    padding: 3.5em 0;
}

footer {
    padding: 3.5em 0 1.5em 0;
}

#hero {
    border-bottom: none;
}

#client-logos-container, #footer-links, #footer-connect {
    border-top: none;
}

.mobile-divider {
    display: none;
}

/*  Tablet - Hero, Testimonial, Contact, Footer Divs Multi Column Section Widths */

#hero-text-container, #hero > div, #about-container, #about-image-outer {
    flex: 1 0 40%;
    margin: auto;
}

#hero-image {
    text-align: center;
}

#hero-text-container, #hero-text-container, #about-container, #about-image-outer {
    text-align: left;
}

#contact {
    flex-direction: row-reverse;
    justify-content: center;
    align-items: flex-start;
}

#connect-container, .form-container {
    text-align: left;
    margin: 0 auto;
    align-items: flex-start;
}

.form-container {
    flex: 1 0 280px;
    padding: 2em;
}

#connect-container {
    flex: 2 2 40%;
    padding: 2.5em;
}

/* Tablet - Client Logos & Testimonial Single Column Section Widths */

#client-logos-inner, .testimonials-container {
    width: 100%;
}
/* Tablet - End Client Logos & Testimonial Single Column Section Widths */

/* Tablet - Service Section */
#service2 {
    margin: 0;
}
/* Tablet - End Service Section */

/* Tablet - About Section */
#about-container, #about-image-outer {
    width: 40%;
}

#about-image-container {
    background: url('../images/matthew-shepherd.webp') no-repeat center center;    
    width: 280px;
    height: 280px;
}

#about-image-bg {
    background-size: auto;
}

/* Tablet - End About Section */

/* Tablet - Footer Section */
#footer-links li {
    display: inline;
    margin-right: 20px;
}

#links-left-block {
    flex: 1 1 33.33%;
}


/* Tablet - End Footer Section */

}

/* Small Screens and Laptop Styles */

@media only screen and (min-width: 768px) {

header {
    padding: 0;
}

section {
    padding: 3.5em 0;
}


#client-logos-container {
    padding-bottom: 3.5em;
}

#links-right-block {
    min-width: 430px;
}


/* Fonts */
h1 {
    font-size: 1.75em;
}

h2 {
    font-size: 1.5em;   
}
    
}
/* ... */

